--- a/cleanup.css
+++ b/cleanup.css
@@ -1,5 +1,6 @@
 * {
 	font-family: "Open Sans" !important;
-	font-size: "20px" !important;
+    font-size: 20px !important;
+    line-height: 40px !important;
+    color: #444 !important;
 }
-body { line-height: 20px !important;}
